# blind-hub

./: .gitignore  Cargo.toml  README.md  test.c
blind-core/: Cargo.toml
blind-core/src/: aes.rs  bitcoin_rpc.rs  ecdsa.rs  encoder.rs  lib.rs  puzzle.rs  rsohc.rs  script.rs  transaction.rs  zero_knowledge.rs  zkgc.rs
blind-core/src/channel/: blind.rs  mod.rs  user.rs
blind-core/src/hub/: mod.rs  reciver.rs  sender.rs  tumbler.rs
blind-core/tests/: test_circuit.rs  test_tcp.rs
circuit/: Makefile  yosys_script
circuit/src/: util.v
circuit/src/aes256/: aes256.bristol  aes256.v  raw_aes256.v
circuit/src/sha256/: gen_wrapper.py  sha256.bristol  sha256.v
circuit/src/zero-knowledge/: zk_aed_timeout.v  zk_all.v  zk_split_delivery.v  zk_split_final.v
class/: Cargo.toml
class/proptest-regressions/: lib.txt
class/src/: lib.rs
class/src/primitives/: cl_dl_lcm.rs  cl_dl_public_setup.rs
curv/: Cargo.toml
curv/src/arithmetic/: big_gmp.rs  errors.rs  mod.rs  serde_support.rs
curv/src/elliptic/curves/: secp256_k1.rs
curv/src/elliptic/curves/bls12_381/: scalar.rs
fancy-garbling/: Cargo.toml
fancy-garbling/src/: circuit.rs  lib.rs  parser.rs
fancy-garbling/src/twopac/semihonest/: evaluator.rs  garbler.rs
ocelot/: Cargo.toml
ocelot/src/ot/: chou_orlandi.rs  naor_pinkas.rs
rust-gmp/: Cargo.toml
rust-gmp/src/: lib.rs  mpz.rs  test.rs
scuttlebutt/: Cargo.toml
scuttlebutt/benches/: block.rs
scuttlebutt/src/: block.rs  channel.rs
scuttlebutt/src/channel/: track_channel.rs
