[package]
name = "blind-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.4.0", features = ["json"] }
serde = "1.0.136"
anyhow = "1.0.57"
thiserror = "1.0.30"
curv-kzen = { path="../curv" }
class_group = { path="../class" }
fancy-garbling = { path = "../fancy-garbling", features=["serde1"] }
ocelot = { path = "../ocelot" }
scuttlebutt = { path = "../scuttlebutt" }
aes = "0.8"
generic-array = "0.14"
kzen-paillier = "0.4"
once_cell = "1.13.0"
bincode = "1.3"

# Conssitent version for the following package
bitcoin = { version = "0.28.0", features = ["bitcoinconsensus"] }
sha2 = "0.10.2"
rand = "0.7"

[dev-dependencies]
testcontainers = "0.14.0"
once_cell = "1.13.0"
bincode = "1.3.3"