[package]
name = "ocelot"
version = "0.4.0"
authors = ["Alex J. Malozemoff <amaloz@galois.com>"]
license = "MIT"
readme = "README.md"
description = "A library for oblivious transfer protocols"
categories = ["cryptography"]
keywords = ["cryptography", "oblivious-transfer", "OT"]
edition = "2018"
publish = false
build = "build.rs"
autoexamples = true

[lib]

[features]
nightly = ["rand/nightly", "scuttlebutt/nightly"]

[dependencies]
libc = "0.2"
rand = "0.7"
scuttlebutt = { path = "../scuttlebutt", features = [] }

[dependencies.curv]
package = "curv-kzen"
path = "../curv"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "ot"
harness = false

[[bench]]
name = "oprf"
harness = false

[[example]]
name = "kmprt"
harness = false
